--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="request" />
+        <Button
+            android:layout_marginTop="12dp"
+            android:id="@+id/clickBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="click" />
 
 
         <androidx.recyclerview.widget.RecyclerView
